--- a/chatroom1.1/public/css/index.css
+++ b/chatroom1.1/public/css/index.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-  background-color: rgb(154,162,173);
+  background-color: rgb(154, 162, 173);
 }
 
 /*登录界面*/
@@ -17,7 +17,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   padding: 20px;
   transition: display 1s;
 }
@@ -108,7 +108,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 80px;
   cursor: pointer;
@@ -267,7 +267,7 @@ body {
 .sendMsg {
   display: flex;
   justify-content: flex-end;
-  align-items: baseline;
+  /*align-items: baseline;*/
   margin-top: 15px;
 }
 
@@ -279,8 +279,13 @@ body {
   margin-top: 15px;
 }
 
+.sendMsg .avatarImg {
+  position: relative;
+  top: -15px;
+}
+
 .sendMsg .avatarImg,
-.sendImgMsg .avatarImg{
+.sendImgMsg .avatarImg {
   margin-right: 0;
   margin-left: 8px;
 }
@@ -295,7 +300,9 @@ body {
   max-width: 200px;
   text-align: left;
   font-size: 15px;
-  word-break:break-all;
+  word-break: break-all;
+  display: flex;
+  align-items: center;
 }
 
 .sendContent:after {
@@ -308,15 +315,26 @@ body {
   height: 0;
   border-style: solid;
   border-width: 5px;
-  border-color: transparent transparent transparent rgb(179,224,129);
+  border-color: transparent transparent transparent rgb(179, 224, 129);
+}
+
+/* 复制粘贴其他地方的文字时，重新设置样式 */
+.sendContent span,
+.receiveContent span{
+  color: black !important;
+  background-color: transparent !important;
+}
+
+.sendContent img,
+.receiveContent img{
+  width: 150px;
 }
 
 /*图片中图片的大小*/
 .sendImg,
-.receiveImgMsg{
+.receiveImgMsg {
   width: 150px;
   /*height: 120px;*/
-  /*transform: scale(0.3);*/
   cursor: pointer;
 }
 
@@ -338,6 +356,7 @@ body {
   border-radius: 2px;
   font-size: 15px;
   max-width: 200px;
+  word-break: break-all;
 }
 
 .receiveContent:after {
@@ -390,6 +409,7 @@ body {
 .chooseFile {
   position: relative;
 }
+
 .fileInput {
   position: absolute;
   top: 0;
@@ -401,15 +421,19 @@ body {
 }
 
 .inputContainer .contentEdit {
-  background-color: rgb(236,236,236);
-  /*禁止调节大小*/
-  /*resize: none;*/
+  background-color: rgb(236, 236, 236);
   border: none;
   outline: none;
   margin-top: 10px;
   font-size: 15px;
   height: 70px;
   overflow: auto;
+}
+
+.contentEdit span,
+.contentEdit img {
+  color: black !important;
+  background-color: transparent !important;
 }
 
 .sendContainer {
