--- a/chatroom1.2/public/css/chat.css
+++ b/chatroom1.2/public/css/chat.css
@@ -16,18 +16,35 @@
   overflow: auto;
 }
 
-.user-info {
+.header-title {
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.loginOut {
+  color: #2e6da4;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 12px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.current-user-info {
   display: flex;
   align-items: center;
-  /*justify-content: space-between;*/
+  justify-content: space-between;
   padding: 10px 0;
   cursor: pointer;
 }
 
-.header-title {
-  height: 50px;
-  line-height: 50px;
-  /*margin-left: ;*/
+.user-info {
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
+  cursor: pointer;
 }
 
 .avatarImg {
@@ -44,7 +61,6 @@
   border-radius: 3px;
   font-size: 12px;
   background-color: #fff;
-  margin-left: 90px;
 }
 
 
